@@ -1,19 +1,18 @@
 plugins {
     `java-library`
+    jpgen.`publish-convention` apply false
 }
 
 subprojects {
-    apply(plugin = "java-library")
-
     group = "fr.kenlek.jpgen"
-    version = "0.2.0"
+
+    apply(plugin = "java-library")
 
     java {
         sourceCompatibility = JavaVersion.VERSION_25
         targetCompatibility = JavaVersion.VERSION_25
 
         withSourcesJar()
-        withJavadocJar()
     }
 
     repositories {
@@ -21,17 +20,7 @@ subprojects {
         mavenLocal()
     }
 
-    tasks.compileJava.configure {
-        options.javaModuleVersion.set(project.version.toString())
-        options.compilerArgs.addAll(listOf(
-            "-Xlint:all,-restricted,-serial",
-            "-Werror"
-        ))
-    }
-
-    tasks.withType<JavaExec>().configureEach {
-        jvmArgs(
-            "--enable-native-access=ALL-UNNAMED"
-        )
+    tasks.compileJava {
+        options.compilerArgs.addAll(listOf("-Xlint:all", "-Werror"))
     }
 }
